Fix blog header overline on Safari & on mobile view

--- a/src/html/pages/blog-post.scss
+++ b/src/html/pages/blog-post.scss
@@ -6,21 +6,27 @@
   h3 { 
     font-size: 1.2em;
     --h-overline-height: 8px;
-    --h-overline-outdent: 20px;
+    @media (min-width: 800px) {
+      --h-overline-outdent: 20px;
+    }
   }
 
   h4 {
     font-size: 1.15em;
     margin-bottom: 0;
     --h-overline-height: 4px;
-    --h-overline-outdent: 14px;
+    @media (min-width: 800px) {
+      --h-overline-outdent: 14px;
+    }
   }
 
   h5 {
     font-size: 1.1em;
     margin-bottom: 0;
     --h-overline-height: 2px;
-    --h-overline-outdent: 6px;
+    @media (min-width: 800px) {
+      --h-overline-outdent: 6px;
+    }
   }
 
   h3, h4, h5 {
@@ -32,8 +38,10 @@
       bottom: 0;
       content: ' ';
       display: block;
-      width: calc(100% + var(--h-overline-outdent));
-      margin-left: calc(-1 * var(--h-overline-outdent));
+      --overline-outdent: var(--h-overline-outdent, 8px);
+      width: calc(100% + var(--overline-outdent));
+      margin-left: calc(-1 * var(--overline-outdent));
+      border-width: 0;
       border-top-width: var(--h-overline-height);
       border-top-style: solid;
       border-image: linear-gradient(to right, var(--color-secondary), transparent 20%) 1;
